--- a/serv/commands.yml
+++ b/serv/commands.yml
@@ -10,8 +10,6 @@
 # Forums: https://www.spigotmc.org/
 # Bug tracker: https://www.spigotmc.org/go/bugs
 
+aliases: []
 command-block-overrides: []
 ignore-vanilla-permissions: false
-aliases:
-  icanhasbukkit:
-  - version $1-
