--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ebow"]
 	path = ebow
-	url = git@github.com:/Ghost-Zephyr/EnderBow.git
+	url = git@github.com:Ghost-Zephyr/EnderBow.git
 [submodule "eitems"]
 	path = eitems
-	url = git@github.com:/Ghost-Zephyr/EnderItems.git
+	url = git@github.com:Ghost-Zephyr/EnderItems.git
 [submodule "cess"]
 	path = cess
 	url = git@github.com:Ghost-Zephyr/CustomEssentials.git
