--- a/serv/server.properties
+++ b/serv/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Wed Jan 27 10:36:22 CET 2021
+#Fri Jan 29 13:03:21 CET 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -8,7 +8,7 @@ gamemode=survival
 enable-query=false
 generator-settings=
 level-name=world
-motd=A Testing Server
+motd=\u00A75A Testing Server
 query.port=25565
 pvp=true
 generate-structures=true
