--- a/serv/server.properties
+++ b/serv/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Jan 29 13:03:21 CET 2021
+#Thu Feb 04 03:22:48 UTC 2021
 enable-jmx-monitoring=false
 rcon.port=25575
 level-seed=
@@ -15,10 +15,10 @@ generate-structures=true
 difficulty=peaceful
 network-compression-threshold=256
 max-tick-time=60000
-max-players=69
 use-native-transport=true
+max-players=69
 enable-status=true
-online-mode=true
+online-mode=false
 allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=10
