Added discord bot

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-serv/version_history.json
-serv/usercache.json
-serv/papermc-*.jar
-serv/eula.txt
-serv/plugins/
-serv/cache
-serv/worl*
-serv/worl
-serv/logs
+serv/*/version_history.json
+serv/*/usercache.json
+serv/*/papermc-*.jar
+serv/*/eula.txt
+serv/*/plugins/
+serv/*/cache
+serv/*/worl*
+serv/*/worl
+serv/*/logs
 waterfall/plugins/*
 waterfall/modules/*
 waterfall/logs/*
