--- a/waterfall/config.yml
+++ b/waterfall/config.yml
@@ -1,51 +1,59 @@
-server_connect_timeout: 5000
+prevent_proxy_connections: false
 listeners:
 - query_port: 25565
   motd: '&5Waterfall testing server'
   tab_list: GLOBAL_PING
   query_enabled: false
   proxy_protocol: false
-  forced_hosts: []
+  forced_hosts:
+    farlands.localhost: farlands
   ping_passthrough: false
   priorities:
   - testing
   bind_local_address: true
   host: 0.0.0.0:25565
-  max_players: 69
+  max_players: 1
   tab_size: 60
   force_default_server: false
 remote_ping_cache: -1
 network_compression_threshold: 256
 permissions:
   default:
-  - bungeecord.command.list
-  mod:
+  - river.command.travel
   - bungeecord.command.server
-  - bungeecord.command.find
+  - bungeecord.command.list
   admin:
-  - bungeecord.command.send
-  god:
   - bungeecord.command.alert
   - bungeecord.command.end
   - bungeecord.command.ip
   - bungeecord.command.reload
 log_pings: true
 connection_throttle_limit: 3
-prevent_proxy_connections: false
+server_connect_timeout: 5000
 timeout: 30000
-player_limit: 69
+inject_commands: true
+player_limit: -1
 ip_forward: true
-groups: {}
+groups:
+  GhostZephyr:
+  - admin
 remote_ping_timeout: 5000
 connection_throttle: 4000
 log_commands: false
-stats: b613ac7b-50a7-4e56-b2e2-b0e8ac324ef4
+stats: 00d487e0-0d3d-4080-b642-c218bb38e676
 online_mode: true
 forge_support: true
 disabled_commands: []
-inject_commands: true
 servers:
+  lobby:
+    motd: '&1Lobby host'
+    address: lobby:25565
+    restricted: false
   testing:
-    motd: 'Testing server for testing plugins!'
+    motd: '&1Testing host'
     address: testing:25565
+    restricted: false
+  farlands:
+    motd: '&2Cuberite - in C++'
+    address: 10.0.0.7:25565
     restricted: false
