--- a/waterfall/waterfall.yml
+++ b/waterfall/waterfall.yml
@@ -3,6 +3,6 @@ disable_modern_tab_limiter: true
 log_initial_handler_connections: true
 throttling:
   tab_complete: 1000
-game_version: '1.16.5'
+game_version: '1.16.x'
 disable_tab_list_rewrite: false
 disable_entity_metadata_rewrite: false
